--- a/pjt_04/03_detail_view.html
+++ b/pjt_04/03_detail_view.html
@@ -45,8 +45,7 @@
     <div class="row">
       <div class="col-lg-3 col-md-4 col-sm-6 col-12 py-2">
         <div class="card">
-          <img src="images/20198323.jpg" class="card-img-top" alt="레드슈즈" data-toggle="modal"
-          data-target="#movie_1">
+          <img src="images/20198323.jpg" class="card-img-top" alt="레드슈즈" data-toggle="modal" data-target="#movie_1">
           <div class="card-body">
             <h5 class="card-title">레드슈즈<br><span class="badge badge-info">9.24</span></h5>
             <hr>
@@ -59,8 +58,7 @@
       </div>
       <div class="col-lg-3 col-md-4 col-sm-6 col-12 py-2">
         <div class="card">
-          <img src="images/20184621.jpg" class="card-img-top" alt="엑시트" data-toggle="modal"
-          data-target="#movie_2">
+          <img src="images/20184621.jpg" class="card-img-top" alt="엑시트" data-toggle="modal" data-target="#movie_2">
           <div class="card-body">
             <h5 class="card-title">엑시트<br><span class="badge badge-info">9.07</span></h5>
             <hr>
@@ -73,8 +71,7 @@
       </div>
       <div class="col-lg-3 col-md-4 col-sm-6 col-12 py-2">
         <div class="card">
-          <img src="images/20175771.jpg" class="card-img-top" alt="라이온킹" data-toggle="modal"
-          data-target="#movie_3">
+          <img src="images/20175771.jpg" class="card-img-top" alt="라이온킹" data-toggle="modal" data-target="#movie_3">
           <div class="card-body">
             <h5 class="card-title">라이온 킹<br><span class="badge badge-secondary">8.70</span></h5>
             <hr>
@@ -87,8 +84,7 @@
       </div>
       <div class="col-lg-3 col-md-4 col-sm-6 col-12 py-2">
         <div class="card">
-          <img src="images/20183867.jpg" class="card-img-top" alt="알라딘" data-toggle="modal"
-            data-target="#movie_4">
+          <img src="images/20183867.jpg" class="card-img-top" alt="알라딘" data-toggle="modal" data-target="#movie_4">
           <div class="card-body">
             <h5 class="card-title">알라딘<br><span class="badge badge-info">9.45</span></h5>
             <hr>
@@ -101,8 +97,7 @@
       </div>
       <div class="col-lg-3 col-md-4 col-sm-6 col-12 py-2">
         <div class="card">
-          <img src="images/20183844.jpg" class="card-img-top" alt="마이펫2" data-toggle="modal"
-          data-target="#movie_5">
+          <img src="images/20183844.jpg" class="card-img-top" alt="마이펫2" data-toggle="modal" data-target="#movie_5">
           <div class="card-body">
             <h5 class="card-title">마이펫의 이중생활 2<br><span class="badge badge-info">9.12</span></h5>
             <hr>
@@ -115,8 +110,7 @@
       </div>
       <div class="col-lg-3 col-md-4 col-sm-6 col-12 py-2">
         <div class="card">
-          <img src="images/20175771.jpg" class="card-img-top" alt="사자" data-toggle="modal"
-          data-target="#movie_6">
+          <img src="images/20180442.jpg" class="card-img-top" alt="사자" data-toggle="modal" data-target="#movie_6">
           <div class="card-body">
             <h5 class="card-title">사자<br><span class="badge badge-secondary">8.32</span></h5>
             <hr>
@@ -132,8 +126,66 @@
   </div>
 
   <!-- Modal -->
-  <div class="modal fade" id="movie_1" tabindex="-1" role="dialog" aria-labelledby="movie_1"
-    aria-hidden="true">
+  <div class="modal fade" id="movie_1" tabindex="-1" role="dialog" aria-labelledby="movie_1" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">레드슈즈, Red Shoes</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="images/20198323-01.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="images/20198323-02.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="images/20198323-03.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <br>
+          <div>
+            전체관람가
+          </div>
+          <div>
+            누적 관람객수: 527,430
+          </div>
+          <hr>
+          <div>
+            한편, 초록색 난쟁이가 된 일곱 왕자들은 우연히 자신들의 집에 머물게 된 '레드슈즈’가 
+             저주를 풀 유일한 희망이라 생각해 그녀를 돕기 시작하고, 영원한 아름다움을 꿈꾸는 왕비 ‘레지나’는 
+             마법구두를 신고 성을 빠져나간 ‘레드슈즈’를 쫓기 시작하는데… 
+              
+             위기에 빠진 동화의 섬, 
+             레드슈즈, 그리고 일곱 왕자들의 운명은?"
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal fade" id="movie_2" tabindex="-1" role="dialog" aria-labelledby="movie_2" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -152,8 +204,7 @@
       </div>
     </div>
   </div>
-  <div class="modal fade" id="movie_2" tabindex="-1" role="dialog" aria-labelledby="movie_2"
-    aria-hidden="true">
+  <div class="modal fade" id="movie_3" tabindex="-1" role="dialog" aria-labelledby="movie_3" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -172,8 +223,7 @@
       </div>
     </div>
   </div>
-  <div class="modal fade" id="movie_3" tabindex="-1" role="dialog" aria-labelledby="movie_3"
-    aria-hidden="true">
+  <div class="modal fade" id="movie_4" tabindex="-1" role="dialog" aria-labelledby="movie_4" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -192,8 +242,7 @@
       </div>
     </div>
   </div>
-  <div class="modal fade" id="movie_4" tabindex="-1" role="dialog" aria-labelledby="movie_4"
-    aria-hidden="true">
+  <div class="modal fade" id="movie_5" tabindex="-1" role="dialog" aria-labelledby="movie_5" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -212,28 +261,7 @@
       </div>
     </div>
   </div>
-  <div class="modal fade" id="movie_5" tabindex="-1" role="dialog" aria-labelledby="movie_5"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="modal fade" id="movie_6" tabindex="-1" role="dialog" aria-labelledby="movie_6"
-    aria-hidden="true">
+  <div class="modal fade" id="movie_6" tabindex="-1" role="dialog" aria-labelledby="movie_6" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
