--- a/pjt_04/01_layout.html
+++ b/pjt_04/01_layout.html
@@ -24,15 +24,13 @@
       </div>
     </div>
   </nav>
-  <header>
-    <!-- <div class="container"> -->
-      <h2 class="text-secondary text-center">당신이 좋아할 만한<br>영화를 준비했습니다.</h2>
-    <!-- </div> -->
+  <header id="go-top">
+    <h2 class="text-secondary text-center">당신이 좋아할 만한<br>영화를 준비했습니다.</h2>
   </header>
 
   <footer class="bg-light">
     <span class="text-secondary">Copyright ⓒ 2019 GH-Lim All rights reserved.</span>
-    <a class="text-secondary" href="#" id="go-up"><i class="fas fa-arrow-alt-circle-up"></i></a>
+    <a class="text-secondary" href="#go-top" id="go-up"><i class="fas fa-arrow-alt-circle-up"></i></a>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
