--- a/pjt_04/02_movie.html
+++ b/pjt_04/02_movie.html
@@ -38,16 +38,18 @@
 
 
   <div class="container" id="movie-list">
-    <h3 class="text-center mt-3" id="subtitle">영화 목록</h3>
-    <hr class="border border-warning mt-1">
+    <div class="my-5" id="subtitle">
+      <h3 class="text-center">영화 목록</h3>
+      <hr class="border border-warning">
+    </div>
+
     <!-- Card Grid -->
-    <!-- <div class="container"> -->
     <div class="row">
-      <div class="col-lg-3 col-md-4 col-sm-6 col-12 py-2">
+      <div class="col-lg-3 col-md-4 col-sm-6 col-12 py-2 px-1">
         <div class="card">
           <img src="images/20198323.jpg" class="card-img-top" alt="레드슈즈">
           <div class="card-body">
-            <h5 class="card-title">레드슈즈<br><span class="badge badge-info">9.24</span></h5>
+            <h4 class="card-title">레드슈즈<br><span class="badge badge-info">9.24</span></h4>
             <hr>
             <p class="card-text">애니메이션</p>
             <p class="card-text">개봉일: 2019.07.25.</p>
@@ -56,11 +58,11 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 col-12 py-2">
+      <div class="col-lg-3 col-md-4 col-sm-6 col-12 py-2 px-1">
         <div class="card">
           <img src="images/20184621.jpg" class="card-img-top" alt="water">
           <div class="card-body">
-            <h5 class="card-title">엑시트<br><span class="badge badge-info">9.07</span></h5>
+            <h4 class="card-title">엑시트<br><span class="badge badge-info">9.07</span></h4>
             <hr>
             <p class="card-text">코미디</p>
             <p class="card-text">개봉일: 2019.07.31.</p>
@@ -69,11 +71,11 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 col-12 py-2">
+      <div class="col-lg-3 col-md-4 col-sm-6 col-12 py-2 px-1">
         <div class="card">
           <img src="images/20175771.jpg" class="card-img-top" alt="water">
           <div class="card-body">
-            <h5 class="card-title">라이온 킹<br><span class="badge badge-secondary">8.70</span></h5>
+            <h4 class="card-title">라이온 킹<br><span class="badge badge-secondary">8.70</span></h4>
             <hr>
             <p class="card-text">모험</p>
             <p class="card-text">개봉일: 2019.07.17.</p>
@@ -82,11 +84,11 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 col-12 py-2">
+      <div class="col-lg-3 col-md-4 col-sm-6 col-12 py-2 px-1">
         <div class="card">
           <img src="images/20183867.jpg" class="card-img-top" alt="water">
           <div class="card-body">
-            <h5 class="card-title">알라딘<br><span class="badge badge-info">9.45</span></h5>
+            <h4 class="card-title">알라딘<br><span class="badge badge-info">9.45</span></h4>
             <hr>
             <p class="card-text">판타지</p>
             <p class="card-text">개봉일: 2019.05.23.</p>
@@ -95,11 +97,11 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 col-12 py-2">
+      <div class="col-lg-3 col-md-4 col-sm-6 col-12 py-2 px-1">
         <div class="card">
           <img src="images/20183844.jpg" class="card-img-top" alt="water">
           <div class="card-body">
-            <h5 class="card-title">마이펫의 이중생활 2<br><span class="badge badge-info">9.12</span></h5>
+            <h4 class="card-title">마이펫의 이중생활2<br><span class="badge badge-info">9.12</span></h4>
             <hr>
             <p class="card-text">애니메이션</p>
             <p class="card-text">개봉일: 2019.07.31.</p>
@@ -108,11 +110,11 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 col-12 py-2">
+      <div class="col-lg-3 col-md-4 col-sm-6 col-12 py-2 px-1">
         <div class="card">
-          <img src="images/20175771.jpg" class="card-img-top" alt="water">
+          <img src="images/20180442.jpg" class="card-img-top" alt="water">
           <div class="card-body">
-            <h5 class="card-title">사자<br><span class="badge badge-secondary">8.32</span></h5>
+            <h4 class="card-title">사자<br><span class="badge badge-secondary">8.32</span></h4>
             <hr>
             <p class="card-text">미스터리</p>
             <p class="card-text">개봉일: 2019.07.31.</p>
@@ -122,7 +124,6 @@
         </div>
       </div>
     </div>
-    <!-- </div> -->
   </div>
 
 
